[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/btn_pressed.png" type="Texture" id=1]
[ext_resource path="res://UI/btn_close_pressed.png" type="Texture" id=2]
[ext_resource path="res://UI/save_panel.png" type="Texture" id=3]
[ext_resource path="res://UI/btn.png" type="Texture" id=4]
[ext_resource path="res://UI/btn_close.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/SaveNode.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="SaveMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.356863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -192.0
margin_right = 224.0
margin_bottom = 228.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 34.0
margin_right = -40.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 368.0
margin_bottom = 366.0
custom_constants/separation = -9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="TextureButton" parent="NinePatchRect/MarginContainer/Save"]
margin_right = 368.0
margin_bottom = 125.0
rect_min_size = Vector2( 368, 125 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/Save/Slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 10.0
margin_bottom = -17.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Empty Slot"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="TextureButton" parent="NinePatchRect/MarginContainer/Save"]
margin_top = 116.0
margin_right = 368.0
margin_bottom = 241.0
rect_min_size = Vector2( 368, 125 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/Save/Slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 10.0
margin_bottom = -17.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Empty Slot"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="TextureButton" parent="NinePatchRect/MarginContainer/Save"]
margin_top = 232.0
margin_right = 368.0
margin_bottom = 357.0
rect_min_size = Vector2( 368, 125 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/Save/Slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 10.0
margin_bottom = -17.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Empty Slot"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitSave" type="TextureButton" parent="."]
margin_left = 720.0
margin_top = 96.0
margin_right = 848.0
margin_bottom = 224.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/MarginContainer/Save/Slot1" to="." method="_on_Slot1_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Save/Slot2" to="." method="_on_Slot2_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Save/Slot3" to="." method="_on_Slot3_pressed"]
